...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.BeerDetailsFragment"
        android:background="#ededed" tools:ignore="Overdraw">

    <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/row_beerdetails_subtitle"/>

    <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="16dp"
            android:layout_gravity="end|bottom"
            android:src="@drawable/ic_edit_black_24dp"
...
