<?xml version="1.0" encoding="utf-8"?>
<android.support.design.card.MaterialCardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="8dp"
>

    <android.support.constraint.ConstraintLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:minHeight="50dp"
            android:gravity="center">
        <TextView
                android:id="@+id/beerName"
                android:text="@string/beername_placeholder"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:gravity="start|center_vertical"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginStart="10dp"
                android:layout_height="0dp"
                android:layout_width="0dp"/>
    </android.support.constraint.ConstraintLayout>

</android.support.design.card.MaterialCardView>