...
    <string name="select_image">Select image</string>
    <string name="my_beers">My Beers</string>
    <string name="browse_online">Browse Online</string>
    <string name="save_beer_locally">Save beer locally</string>
    <string name="delete_from_local_library">Delete from local library</string>
    <string name="edit_beer">Edit this beer</string>
    <string name="save_edited_created_beer">Save edited/created beer</string>
    <string name="settings">Settings</string>
    <string name="beer_icon_contentdescription">Icon image of a specific beer</string>
    <string name="name_of_beer">Name of beer</string>
    <string name="saved_indicator_contentdescription">Image indicating whether this beer has been saved or not</string>
    <string name="key">Key</string>
    <string name="show_image_arrow_contentdescription">Image of small arrow that if pressed shows the image of this
...
    <string name="no_styles_found_for_category">No styles could be found for this category</string>
    <string name="fill_in_name">Fill in at least a name for your beer</string>
    <string name="missing_information">Missing information</string>
    <string name="delete_beer_confirmation">Are you sure you want to remove this beer from your local library? Doing
        this will also remove all your notes for this beer.
    </string>
    <string name="delete_beer_dialogtitle">Delete beer</string>
    <string name="add_note">Add note</string>
    <string name="add">Add</string>
    <string name="year_picker_title">Year picker</string>
    <string name="selected_image_toolbartitle">Selected image</string>
    <string name="add_new_beer_toolbartitle">Add new beer</string>
    <string name="edit_beer_toolbartitle">Edit beer</string>
    <string name="api_key_valid">This API key is valid</string>
    <string name="api_key_invalid">This API key is not valid</string>
...
